[package]
name = "ulam"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Utility crate for ulam calculations."
readme = "README.md"
documentation = "https://docs.rs/ulam"
repository = "https://github.com/miketwenty1/ulam/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
