[package]
name = "ulam"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Utility crate for ulam calculations."
readme = "README.md"
documentation = "https://docs.rs/ulam"
repository = "https://github.com/miketwenty1/ulam/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["img"]
img = ["image", "primal"]

[dependencies]
image = { version = "0.24.1", optional = true }
primal = { version = "0.3.0", optional = true }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "image_benchmark"
harness = false
